--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@ config.json
 
 # Supabase
 supabase/.temp
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
